fixing gap for tablet

--- a/client/styles/Home.module.scss
+++ b/client/styles/Home.module.scss
@@ -37,6 +37,10 @@
     &__container {
       width: 50%;
     }
+
+    &__postsSection {
+      row-gap: 4rem;
+    }
   }
 }
 @include large() {
